--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,10 @@
 :root {
-    --navy: #06304b;
-    --gold: #ffce3f; 
+    /* --navy: #06304b; */
+    /* --gold: #ffce3f;  */
+
+    --g: #008C45;
+    --w: #F4F5F0;
+    --r: #CD212A;
 }
 
 * {
@@ -12,9 +16,14 @@ body {
     background-size: cover;
     background-repeat: no-repeat; */
 
-    /* background: rgb(5,250,123);
-    background: linear-gradient(90deg, rgba(5,250,123,1) 0%, rgba(6,48,75,1) 20%, rgba(5,250,123,1) 40%, rgba(6,48,75,1) 60%, rgba(5,250,123,1) 80%, rgba(6,48,75,1) 100%); */
+    /* background: rgb(61,237,151);
+    background: linear-gradient(90deg, rgba(61,237,151,1) 25%, rgba(6,48,75,1) 50%, rgba(61,237,151,1) 75%); */
 
-    background: rgb(61,237,151);
-    background: linear-gradient(90deg, rgba(61,237,151,1) 25%, rgba(6,48,75,1) 50%, rgba(61,237,151,1) 75%);
+    /* background: rgb(0,140,69);
+    background: linear-gradient(90deg, rgba(0,140,69,1) 3%, rgba(244,245,240,1) 10%, rgba(205,33,42,1) 17%, rgba(244,245,240,1) 22%, rgba(244,245,240,1) 78%, rgba(0,140,69,1) 83%, rgba(244,245,240,1) 90%, rgba(205,33,42,1) 97%); */
+
+    background: rgb(0,140,69);
+    background: linear-gradient(90deg, rgba(0,140,69,1) 10%, rgba(244,245,240,1) 30%, rgba(244,245,240,1) 70%, rgba(205,33,42,1) 90%);
+    
 }
+
