--- a/client/src/components/screens/css/Signup.css
+++ b/client/src/components/screens/css/Signup.css
@@ -7,16 +7,15 @@
     --r: #CD212A;
 }
 
-.loginCard {
+.signupCard {
     background-color: var(--g);
     border: 5px solid var(--w);
     padding: 5%;
     margin-top: 5%;
     color: var(--w);
-    z-index: 5;
 }
 
-.loginCard Button {
+.signupCard Button {
     background-color: var(--r);
     border: 1.5px solid var(--w);
     text-transform: inherit;
@@ -27,7 +26,7 @@
     transform: scale(1.3);
 }
 
-.loginCard Button:hover {
+.signupCard Button:hover {
     background-color: var(--w);
     border: 1.5px solid var(--r);
     color: var(--r);
@@ -42,12 +41,12 @@ Form Label {
     font-size: medium;
 }
 
-.alt {
+.alt2 {
     margin-top: 11%;
     margin-left: 25%;
 }
 
-.alt a {
+.alt2 a {
     border: 2px solid var(--w);
     padding: 1.5%;
     text-decoration: none;
@@ -55,7 +54,7 @@ Form Label {
     background-color: var(--r);
 }
 
-.alt a:hover {
+.alt2 a:hover {
     background-color: var(--w);
     border: 2px solid var(--r);
     color: var(--r);
